--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -4,7 +4,7 @@
 .about {
 
   & {
-    background: var(--neutral-gray-2);
+    background: var(--neutral-gray-1);
 
     &__inner {
       display: flex;
