--- a/src/components/BlogFeed/BlogFeed.scss
+++ b/src/components/BlogFeed/BlogFeed.scss
@@ -7,7 +7,7 @@
     padding-inline: 2rem;
     
     &.home {
-      background: var(--neutral-gray-1);
+      background: var(--neutral-gray-2);
     }
     
     &__inner {
