--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -4,7 +4,7 @@
 .portfolio {
 
   & {
-    background: var(--neutral-gray-2);
+    background: var(--neutral-gray-1);
 
     &__inner {
       align-items: center;
