--- a/src/components/Summary/Summary.scss
+++ b/src/components/Summary/Summary.scss
@@ -4,7 +4,7 @@
 .summary {
 
   & {
-    background: var(--neutral-gray-1);
+    background: var(--neutral-gray-2);
     
     &__inner {
       margin-inline: auto;
